# goit-ds-hw-03

./: authors.json  import_data.py  main.py  mongo_connection.py  pyproject.toml  quotes.json  scrape.py
